<resources>
    <string name="app_name">Cats Everywhere</string>
    <string name="layout_login_username">Username (user)</string>
    <string name="layout_login_password">Password (P@ss)</string>
    <string name="layout_login_button_login">Log in</string>
    <string name="layout_login_button_signup">Sign up</string>
    <string name="cat_breed_title_example">Bread Title 1</string>
    <string name="cat_breed_description_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="content_description_cat_bread_list_item_image">Image from a cat bread</string>
    <string name="content_description_cat_bread_details_image">Image from a cat bread</string>
    <string name="layout_login_password_mocked">P@ss</string>
    <string name="layout_login_username_mocked">user</string>
    <string name="description">Description</string>
    <string name="country_code">Country code</string>
    <string name="cat_breed_country_code_example">UK</string>
    <string name="temperament">Temperament</string>
    <string name="cat_breed_temperament_example">Affectionate, Social, Intelligent, Playful, Active</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="cat_breed_wikipedia_example">https://en.wikipedia.org/wiki/Aegean_cat</string>
    <string name="choose_country">Choose a country</string>
</resources>
