<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView_cat_breed"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/colorAccent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_cat_breed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_cat_breed"
            android:layout_width="85dp"
            android:layout_height="85dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/sym_def_app_icon"
            android:contentDescription="@string/content_description_cat_bread_list_item_image" />

        <TextView
            android:id="@+id/textView_breed_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:text="@string/cat_breed_title_example"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_cat_breed"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_bread_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            android:layout_marginEnd="8dp"
            android:maxLines="3"
            android:text="@string/cat_breed_description_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_cat_breed"
            app:layout_constraintTop_toBottomOf="@+id/textView_breed_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>